--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <meta charset="utf-8">
+    <meta content="width=device-width,initial-scale=1,shrink-to-fit=no" name="viewport">
+    <meta content="#000000" name="theme-color">
+    <link href="/gists-blog/manifest.json" rel="manifest">
+    <link href="/gists-blog/favicon.ico" rel="shortcut icon">
+    <title>Posts | My Blog</title>
+    <link href="/gists-blog/static/css/main.037286f1.css" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="root">
+      <h1>Brightspot Technical Assessment: Blog</h1>
+      <ol>
+        <li>
+          <h2>
+            <a aria-current="false" href="/gists-blog/creating-blog-with-cra-and-github">Creating a blog with create-react-app and GitHub</a>
+          </h2>
+          <p>Create React App is a great tool that lets you start a new React application very easily. There are some limitations though that you need to be aware of.</p>
+          <em>2018-02-18</em>
+        </li>
+        <li>
+          <h2>
+            <a aria-current="false" href="/gists-blog/dear-hume">Dear Hume</a>
+          </h2>
+          <p>You ask advice: ah, what a very human and very dangerous thing to do! For to give advice to a man who asks what to do with his life implies something very close to egomania. To presume to point a man to the right and ultimate goal -- to point with a trembling finger in the right direction is something only a fool would take upon himself.</p>
+          <em>1958-04-22</em>
+        </li>
+      </ol>
+    </div>
+    <script src="/gists-blog/static/js/main.50c797bb.js" type="text/javascript"></script>
   </body>
 </html>
