--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta content="width=device-width,initial-scale=1,shrink-to-fit=no" name="viewport">
+    <link href="/gists-blog/favicon.ico" rel="icon">
+    <meta content="width=device-width,initial-scale=1" name="viewport">
     <meta content="#000000" name="theme-color">
+    <meta content="Web site created using create-react-app" name="description">
+    <link href="/gists-blog/logo192.png" rel="apple-touch-icon">
     <link href="/gists-blog/manifest.json" rel="manifest">
-    <link href="/gists-blog/favicon.ico" rel="shortcut icon">
-    <title>Posts | My Blog</title>
+    <title>React Blog</title>
+    <script defer src="/gists-blog/static/js/main.50c797bb.js"></script>
     <link href="/gists-blog/static/css/main.037286f1.css" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-      <h1>Brightspot Technical Assessment: Blog</h1>
-      <ol>
-        <li>
-          <h2>
-            <a aria-current="false" href="/gists-blog/creating-blog-with-cra-and-github">Creating a blog with create-react-app and GitHub</a>
-          </h2>
-          <p>Create React App is a great tool that lets you start a new React application very easily. There are some limitations though that you need to be aware of.</p>
-          <em>2018-02-18</em>
-        </li>
-        <li>
-          <h2>
-            <a aria-current="false" href="/gists-blog/dear-hume">Dear Hume</a>
-          </h2>
-          <p>You ask advice: ah, what a very human and very dangerous thing to do! For to give advice to a man who asks what to do with his life implies something very close to egomania. To presume to point a man to the right and ultimate goal -- to point with a trembling finger in the right direction is something only a fool would take upon himself.</p>
-          <em>1958-04-22</em>
-        </li>
-      </ol>
-    </div>
-    <script src="/gists-blog/static/js/main.50c797bb.js" type="text/javascript"></script>
+    <div id="root"></div>
+    <h1>BrightSpot Sample Blog</h1>
+    <ol>
+      <li>
+        <h2>
+          <a aria-current="false" href="/gists-blog/create-blog-with-cra-and-github">Creating a blog with create-react-app and GitHub</a>
+        </h2>
+        <p>Create React App is a great tool that lets you start a new React application very easily. There are some limitations though that you need to be aware of.</p>
+        <em>2018-02-18</em>
+      </li>
+      <li>
+        <h2>
+          <a aria-current="false" href="/gists-blog/dear-hume">Dear Hume</a>
+        </h2>
+        <p>You ask advice: ah, what a very human and very dangerous thing to do! For to give advice to a man who asks what to do with his life implies something very close to egomania. To presume to point a man to the right and ultimate goal -- to point with a trembling finger in the right direction is something only a fool would take upon himself.</p>
+        <em>1958-04-22</em>
+      </li>
+    </ol>
   </body>
 </html>
